--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -18,6 +18,8 @@
     <p>LENGTH: <%= movie.length + ' min'%> </p>
     <p>RELEASE DATE: <%= movie.release_date %> </p>
     <a href="/movies/edit/<%= movie.id%>"><button>Editar</button></a> <!--jelm -->
+    <a href="/movies/delete/<%= movie.id%>"><button>Borrar</button></a> <!--jelm -->
+
 
 </body>
 </html>
